--- a/index.html
+++ b/index.html
@@ -1,17 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Mason Powers Portfolio Site for 3D and Product Design" />
-        
-        <title>Mason Powers</title>
-        <link rel="icon" href="favicon.png">
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta http-equiv="X-UA-Compatible" content="ie=edge">
+		<meta name="description" content="Mason Powers Portfolio Site for 3D and Product Design" />
+
+		<title>Mason Powers</title>
+        <link rel="icon" href="favicon.ico">
         <link rel="stylesheet" type="text/css" href="style.css" />
-        <script src="app.js"></script>
-    </head>
-    
-    <body>
-        <h1>Mason Powers</h1>
-    </body>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto Serif">
+
+
+		<script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>
+		<script type="importmap">
+			{
+				"imports": {
+					"three": "https://cdn.jsdelivr.net/npm/three@0.145.0/build/three.module.js",
+					"GLTFLoader": "https://cdn.jsdelivr.net/npm/three@0.145.0/examples/jsm/loaders/GLTFLoader.js"
+				}
+			}
+		</script>
+		<script type="module" src="app.js"></script>
+	
+	
+	</head>
+	
+	<body>
+		<div id="model"></div>
+        <div class="textbox">
+            <h1>Hey Hey, I'm Mason Powers. I Create Bullshit</h1>
+        </div>
+        <hr style="text-align: left; width: 400px; color: #FEA46B; margin-left:170px;">
+        <div class="floater">
+            <h2>Gallery</h2>
+        </div>
+
+	</body>
 </html>
