--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<meta name="description" content="Mason Powers Portfolio Site for 3D and Product Design" />
 
 		<title>Mason Powers</title>
-        <link rel="icon" href="favicon.ico">
+		<link rel="icon" type="image/x-icon" href="favicon.ico">
         <link rel="stylesheet" type="text/css" href="style.css" />
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto Serif">
 
