mobile layout complete

--- a/index.html
+++ b/index.html
@@ -27,14 +27,29 @@
 	</head>
 	
 	<body>
-		<div id="model"></div>
-        <div class="textbox">
-            <h1>Hey Hey, I'm Mason Powers. I Create Bullshit</h1>
-        </div>
-        <hr style="text-align: left; width: 400px; color: #FEA46B; margin-left:170px;">
-        <div class="floater">
-            <h2>Gallery</h2>
-        </div>
-
+		<div class="hide-overflow">
+			<div id="model"></div>
+			<div class="textbox">
+				<h1>Hey Hey, I'm Mason Powers. I Create Bullshit</h1>
+			</div>
+			<hr>
+			<div class="floater left">
+				<h2>Gallery</h2>
+			</div>
+			<div class="floater right">
+				<h2>Gallery</h2>
+			</div>
+			<div class="floater left">
+				<h2>Gallery</h2>
+			</div>
+			<div class="floater right">
+				<h2>Gallery</h2>
+			</div>
+			<ul class="navbar">
+				<li><a href="">Home</a></li>
+				<li><a href="">Gallery</a></li>
+				<li><a href="">Contact</a></li>
+			</ul>
+		</div>
 	</body>
 </html>
