--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<link rel="icon" type="image/x-icon" href="favicon.ico">
         <link rel="stylesheet" type="text/css" href="style.css" />
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto Serif">
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=DM Sans:400,700">
 
 
 		<script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>
@@ -27,29 +28,34 @@
 	</head>
 	
 	<body>
-		<div class="hide-overflow">
-			<div id="model"></div>
-			<div class="textbox">
-				<h1>Hey Hey, I'm Mason Powers. I Create Bullshit</h1>
-			</div>
-			<hr>
+		<div id="model"></div>
+		<div class="textbox">
+			<h1>Hey Hey, I'm Mason Powers. I Create Bullshit</h1>
+		</div>
+		<section class="white-bg-section">
+			<!-- <hr> -->
 			<div class="floater left">
-				<h2>Gallery</h2>
+				<h2>Blah Blah Blah</h2>
+				<a>yeah okay i'm sure that's true. whatever you say asshole.</a>
 			</div>
 			<div class="floater right">
-				<h2>Gallery</h2>
+				<h2>Oh God Yeah Sure Okay</h2>
+				<a>just tell them whatever. i couldn't give less of a shit.</a>
 			</div>
 			<div class="floater left">
-				<h2>Gallery</h2>
+				<h2>Fine Whatever. Leave Me Alone</h2>
+				<a>i really don't have time for this. don't you have something better to do?</a>
 			</div>
 			<div class="floater right">
-				<h2>Gallery</h2>
+				<h2>3D Bullshit Specialty</h2>
+				<a>yeah i make little vertices rotate around. get over it.</a>
 			</div>
-			<ul class="navbar">
-				<li><a href="">Home</a></li>
-				<li><a href="">Gallery</a></li>
-				<li><a href="">Contact</a></li>
-			</ul>
+			<hr class="floater">
+		</section>
+		<div class="navbar">
+			<a class ="menu-item" href="">home</a>
+			<a class ="menu-item" href="">gallery</a>
+			<a class ="menu-item" href="">contact</a>
 		</div>
 	</body>
 </html>
