Begin Responsive Work

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" id="top">
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +9,7 @@
 		<title>Mason Powers</title>
 		<link rel="icon" type="image/x-icon" href="favicon.ico">
         <link rel="stylesheet" type="text/css" href="style.css" />
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto Serif">
+        <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto Serif"> -->
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=DM Sans:400,700">
 
 
@@ -23,39 +23,63 @@
 			}
 		</script>
 		<script type="module" src="app.js"></script>
-	
-	
+
 	</head>
 	
-	<body>
+	<body id="body">
 		<div id="model"></div>
-		<div class="textbox">
-			<h1>Hey Hey, I'm Mason Powers. I Create Bullshit</h1>
+		<div class="textbox" id="textbox">
+			<h1>Hey Hey, I'm Mason Powers. I Create 3D Shit</h1>
 		</div>
 		<section class="white-bg-section">
 			<!-- <hr> -->
 			<div class="floater left">
-				<h2>Blah Blah Blah</h2>
-				<a>yeah okay i'm sure that's true. whatever you say asshole.</a>
+				<h2>I Do 3D Visualization</h2>
+				<p>Yeah, I make things look pretty. I make products hyper sellable.</p>
 			</div>
 			<div class="floater right">
-				<h2>Oh God Yeah Sure Okay</h2>
-				<a>just tell them whatever. i couldn't give less of a shit.</a>
+				<h2>Product Design Background</h2>
+				<p>I have a keene eye for aesthetics and an expertise within the design process.</p>
 			</div>
 			<div class="floater left">
-				<h2>Fine Whatever. Leave Me Alone</h2>
-				<a>i really don't have time for this. don't you have something better to do?</a>
+				<h2>Web Hosted 3D Media</h2>
+				<p>Yeah I make little vertices rotate around. 3D is the future of the internet. Don't miss out.</p>
 			</div>
 			<div class="floater right">
-				<h2>3D Bullshit Specialty</h2>
-				<a>yeah i make little vertices rotate around. get over it.</a>
+				<h2>Web Development and Design</h2>
+				<p>HTML, CSS, & Javascript paired with responsive and modern UI design</p>
+			</div>
+			<div class="floater left">
+				<h2>I'm Serious About Fun</h2>
+				<p>Cool. Can I leave now? I'd rather be swimming in a lake or something :)</p>
 			</div>
 			<hr class="floater">
 		</section>
 		<div class="navbar">
-			<a class ="menu-item" href="">home</a>
-			<a class ="menu-item" href="">gallery</a>
-			<a class ="menu-item" href="">contact</a>
+			<a class ="menu-item" href="#top">home</a>
+			<a class ="menu-item" href="gallery.html">gallery</a>
+			<a class ="menu-item" href="contact.html">contact</a>
 		</div>
 	</body>
 </html>
+
+
+<!-- 
+
+TODO:
+Better car model
+Home Page Text
+	Main H1 text
+		Hey hey Im Mason Powers. I create ____
+		Hey hey I'm Mason Powers
+		
+	Spell check all floaters' text
+
+Link buttons to pages
+	Gallery page with bts images
+	Contact page with headshot
+	Home button scrolls to top?
+Design desktop view
+	Responsive trasitions between sizes
+
+-->
