Added Yellow Aventator

--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
 			}
 		</script>
 		<script type="module" src="app.js"></script>
-
 	</head>
 	
 	<body id="body">
-		<div id="model"></div>
-		<div class="textbox" id="textbox">
-			<h1>Hey Hey, I'm Mason Powers. I Create 3D Shit</h1>
-		</div>
-		<section class="white-bg-section">
-			<!-- <hr> -->
+		<div id="scroll-clip">
+			<div class="white-bg-section"></div>
+			<div class="textbox" id="textbox">
+				<h1>Hey Hey, I'm Mason Powers. I Create 3D Shit</h1>
+			</div>
+			<div id="model"></div>
+			<div class="spacer" style="height: 8vh;"></div>
 			<div class="floater left">
 				<h2>I Do 3D Visualization</h2>
 				<p>Yeah, I make things look pretty. I make products hyper sellable.</p>
@@ -54,11 +54,12 @@
 				<p>Cool. Can I leave now? I'd rather be swimming in a lake or something :)</p>
 			</div>
 			<hr class="floater">
-		</section>
+		</div>
 		<div class="navbar">
 			<a class ="menu-item" href="#top">home</a>
 			<a class ="menu-item" href="gallery.html">gallery</a>
 			<a class ="menu-item" href="contact.html">contact</a>
+		</div>
 		</div>
 	</body>
 </html>
@@ -72,7 +73,7 @@ Home Page Text
 	Main H1 text
 		Hey hey Im Mason Powers. I create ____
 		Hey hey I'm Mason Powers
-		
+
 	Spell check all floaters' text
 
 Link buttons to pages
