Added HDRI Environment

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 			{
 				"imports": {
 					"three": "https://cdn.jsdelivr.net/npm/three@0.145.0/build/three.module.js",
-					"GLTFLoader": "https://cdn.jsdelivr.net/npm/three@0.145.0/examples/jsm/loaders/GLTFLoader.js"
+					"GLTFLoader": "https://cdn.jsdelivr.net/npm/three@0.145.0/examples/jsm/loaders/GLTFLoader.js",
+					"RGBELoader": "https://cdn.jsdelivr.net/npm/three@0.145.0/examples/jsm/loaders/RGBELoader.js"
 				}
 			}
 		</script>
@@ -68,7 +69,12 @@
 <!-- 
 
 TODO:
-Better car model
+CAR MODEL CHANGES
+	Finalize car color
+	#7c7bff
+	Wheel wells are highlight color
+	Darken grill image
+	HDRI Lighting
 Home Page Text
 	Main H1 text
 		Hey hey Im Mason Powers. I create ____
