Navbar spacing fixes

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		<div id="scroll-clip">
 			<div class="white-bg-section"></div>
 			<div class="textbox" id="textbox">
-				<h1>Hey Hey, I'm Mason Powers. I Create 3D Shit</h1>
+				<h1>Hey Hey, I'm<br> Mason Powers.<br> I Create 3D Shit</h1>
 			</div>
 			<div id="model"></div>
 			<div class="spacer" style="height: 8vh;"></div>
