Fix pixel ratio

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				<h1>Hey Hey, I'm<br> Mason Powers.<br> I Create 3D Shit</h1>
 			</div>
 			<div id="model"></div>
-			<div class="spacer" style="height: 8vh;"></div>
+			<div class="spacer"></div>
 			<div class="floater left">
 				<h2>I Do 3D Visualization</h2>
 				<p>Yeah, I make things look pretty. I make products hyper sellable.</p>
