Small positioning fixes

--- a/index.html
+++ b/index.html
@@ -68,25 +68,29 @@
 
 <!-- 
 
-TODO:
+[]===== TODO =====[]
+
 CAR MODEL CHANGES
+	AO export
+		Soft Shadow
 	Finalize car color
 	#7c7bff
 	Wheel wells are highlight color
-	Darken grill image
-	HDRI Lighting
+
 Home Page Text
 	Main H1 text
 		Hey hey Im Mason Powers. I create ____
-		Hey hey I'm Mason Powers
-
+		Hey Hey I'm Mason Powers. I Do Everything 3D.
 	Spell check all floaters' text
 
 Link buttons to pages
 	Gallery page with bts images
 	Contact page with headshot
-	Home button scrolls to top?
-Design desktop view
-	Responsive trasitions between sizes
+
+Desktop View
+	Better look to floaters
+
+Tablet View
+	Bigger Navbar
 
 -->
