Added Gallery Page

--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
 			</div>
 			<div class="floater right">
 				<h2>Product Design Background</h2>
-				<p>I have a keene eye for aesthetics and an expertise within the design process.</p>
+				<p>I have a keen eye for aesthetics and an expertise within the design process.</p>
 			</div>
 			<div class="floater left">
 				<h2>Web Hosted 3D Media</h2>
-				<p>Yeah I make little vertices rotate around. 3D is the future of the internet. Don't miss out.</p>
+				<p>I make little vertices rotate around. 3D is the future of the internet. Don't miss out.</p>
 			</div>
 			<div class="floater right">
 				<h2>Web Development and Design</h2>
@@ -52,7 +52,7 @@
 			</div>
 			<div class="floater left">
 				<h2>I'm Serious About Fun</h2>
-				<p>Cool. Can I leave now? I'd rather be swimming in a lake or something :)</p>
+				<p>Cool. Can I leave now? I'd rather be swimming in a lake or something</p>
 			</div>
 			<hr class="floater">
 		</div>
