--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
 		<title>Mason Powers</title>
 		<link rel="icon" type="image/x-icon" href="favicon.ico">
         <link rel="stylesheet" type="text/css" href="style.css" />
-        <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto Serif"> -->
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=DM Sans:400,700">
-
+		<!-- Roboto 100 400-->
 
 		<script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>
 		<script type="importmap">
@@ -31,34 +30,36 @@
 			<div class="white-bg-section"></div>
 			<div class="textbox" id="textbox">
 				<h1>Hey Hey, I'm<br> Mason Powers.<br> I Create 3D Shit</h1>
+				<!-- <h1>Hey Hey, I'm<br> Mason Powers.<br> I'm All Things 3D</h1> -->
 			</div>
 			<div id="model"></div>
 			<div class="spacer"></div>
 			<div class="floater left">
 				<h2>I Do 3D Visualization</h2>
-				<p>Yeah, I make things look pretty. I make products hyper sellable.</p>
+				<p>I make products pretty. Photorealistic renders and animations for ecommerce, marketing, or just to look at.</p>
 			</div>
 			<div class="floater right">
 				<h2>Product Design Background</h2>
-				<p>I have a keen eye for aesthetics and an expertise within the design process.</p>
+				<p>I have a sharp eye for aesthetics, and a tight grasp on the entire design process.</p>
 			</div>
 			<div class="floater left">
 				<h2>Web Hosted 3D Media</h2>
-				<p>I make little vertices rotate around. 3D is the future of the internet. Don't miss out.</p>
+				<p>I make little vertices rotate around in cyberspace. 3D is the future of the internet and you don't want to miss out.</p>
 			</div>
 			<div class="floater right">
-				<h2>Web Development and Design</h2>
-				<p>HTML, CSS, & Javascript paired with responsive and modern UI design</p>
+				<h2>Web Development & <br>UX Design</h2>
+				<p>HTML, CSS, & Javascript paired with responsive, fun, and modern UI design</p>
 			</div>
 			<div class="floater left">
-				<h2>I'm Serious About Fun</h2>
-				<p>Cool. Can I leave now? I'd rather be swimming in a lake or something</p>
+				<h2>I'm Serious About Fun!</h2>
+				<p>Everything I create excites me and if it doesn't have some character then what's the point?</p>
 			</div>
 			<hr class="floater">
 		</div>
 		<div class="navbar">
 			<a class ="menu-item" href="#top">home</a>
 			<a class ="menu-item" href="gallery.html">gallery</a>
+			<a class ="menu-item" href="services.html">services</a>
 			<a class ="menu-item" href="contact.html">contact</a>
 		</div>
 		</div>
@@ -84,13 +85,19 @@ Home Page Text
 	Spell check all floaters' text
 
 Link buttons to pages
-	Gallery page with bts images
-	Contact page with headshot
+	Contact page with headshot, more fun images of myself, contacts etc.
 
 Desktop View
 	Better look to floaters
 
 Tablet View
 	Bigger Navbar
+
+Services Tab:
+	Hosting 3D Media
+	Product Renders
+	Animations
+	3D Modeling
+	Web Design
 
 -->
