text and scroll fixes

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			<div class="spacer"></div>
 			<div class="floater left">
 				<h2>I Do 3D Visualization</h2>
-				<p>I make products pretty. Photorealistic renders and animations for ecommerce, marketing, or just to look at.</p>
+				<p>I make products pretty. Photorealistic renders and animations for ecommercea and marketing... or just to look at.</p>
 			</div>
 			<div class="floater right">
 				<h2>Product Design Background</h2>
@@ -52,7 +52,7 @@
 			</div>
 			<div class="floater left">
 				<h2>I'm Serious About Fun!</h2>
-				<p>Everything I create excites me and if it doesn't have some character then what's the point?</p>
+				<p>Everything I create excites me. If my work doesn't have character then what's the point?</p>
 			</div>
 			<hr class="floater">
 		</div>
@@ -70,6 +70,11 @@
 <!-- 
 
 []===== TODO =====[]
+
+FIXES:
+Slight extra horizonal room. some element has 100vw
+extend body on home page for full car rotation
+white appearing on overscroll
 
 CAR MODEL CHANGES
 	AO export
