Added Responsive gallery images

--- a/gallery.html
+++ b/gallery.html
@@ -53,28 +53,66 @@
 				<h1>Gallery</h1>
 				<h2>No Flash Photography!</h2>
 			</div>
+			
+			<figure>
+				<img 	class="gallery-item left" src="assets/images/Mason_Powers_C8_Z06.jpg" alt="Corvette C8 Z06 In A Fall Garden Render">
+			</figure>
 
-			<img 	class="gallery-item left" src="assets/images/Mason_Powers_C8_Z06.jpg" alt="Corvette C8 Z06 In A Fall Garden Render">
-			<img 	class="gallery-item right" src="assets/images/Mason_Powers_C8_Z06_BTS.jpg" alt="Corvette C8 Z06 In A Fall Garden Clay Render Material Overide">
-			<p>Material Shader Development, 3D Environment Design, Lighting Setup, Rendering, Compositing, Color Grading</p>
+			<figure>
+				<img 	class="gallery-item right" src="assets/images/Mason_Powers_C8_Z06_BTS.jpg" alt="Corvette C8 Z06 In A Fall Garden Clay Render Material Overide">
+			</figure>
+			<p>Marketing image I created for a client. Work showcased: Material Shader Development, 3D Environment Design, Lighting Setup, Rendering, Compositing, Color Grading</p>
+
+			<figure>
+				<img 	class="gallery-item left" src="assets/images/Mason_Powes_Porsche_Wing_Render.jpg" alt="Yellow Porsche 911 GT3 Render Banner">
+			</figure>
+
+			<figure>
+				<img 	class="gallery-item left" src="assets/images/Mason_Powers_Porsche_GT3_Airflow_Render.jpg" alt="Green Porsche 911 GT3 Render With Airflow Banner">
+			</figure>
+			<p>Banner images I created for a website homepage. Work showcased: 3D Modeling, Material Shader Development, 3D Environment Design, Lighting Setup, Rendering, Compositing, Color Grading</p>
+
+			<figure>
+				<img	class="gallery-item right" src="assets/images/Mason_Powers_VR_Headset.jpg" alt="VR Headset Floating Above Table Render">
+			</figure>
+			<p>VR headset visualization personal project. Work showcased: 3D Modeling, Material Shader Development, Lighting Setup, Color Grading, Post Processing</p>
+
+			<figure>
+				<iframe class="gallery-item right landscape" src="https://www.youtube.com/embed/vU2Qjg7E12c?autoplay=0&mute=0&loop=1&modestbranding=1"></iframe>
+			</figure>
+			<p>Animation created to showcase the VR headset. Work showcased: 3D Modeling, Animation, Material Shader Development, 3D Environment Design, Compositing, Video Editing</p>
+
+			<figure>
+				<iframe class="gallery-item left landscape" src="https://www.youtube.com/embed/hdk5XY2Qk9w?autoplay=0&mute=0&loop=1&modestbranding=1"></iframe>
+			</figure>
+			<p>Intro/Outro graphic created for social media. Work Showcased: 3D Modeling, Animation, Material Shader Development, Sound Design, Lighting Setup, Compositing, Video Editing</p>
+
+			<figure>
+				<iframe class="gallery-item right portrait" src="https://www.youtube.com/embed/ElEQ9QfnQZU?autoplay=0&mute=0&loop=1&modestbranding=1"></iframe>
+			</figure>
+			<p>Animation to showcase a new product launch. Work Showcased: Animation, Material Shader Development, Lighting Setup, Compositing, Video Editing</p>
 			
-			<img 	class="gallery-item left" src="assets/images/Mason_Powes_Porsche_Wing_Render.jpg" alt="Yellow Porsche 911 GT3 Render Banner">
-			<img 	class="gallery-item left" src="assets/images/Mason_Powers_Porsche_GT3_Airflow_Render.jpg" alt="Green Porsche 911 GT3 Render With Airflow Banner">
-			<p>Web Banners - 3D Modeling, Material Shader Development, 3D Environment Design, Lighting Setup, Rendering, Compositing, Color Grading</p>
-			
-			<img	class="gallery-item right" src="assets/images/Mason_Powers_VR_Headset.jpg" alt="VR Headset Floating Above Table Render">
-			<iframe class="gallery-item right landscape" src="https://www.youtube.com/embed/vU2Qjg7E12c?autoplay=0&mute=0&loop=1&modestbranding=1"></iframe>
-			<p>3D Modeling, Animation, Material Shader Development, 3D Environment Design, Compositing, Video Editing</p>
-			
-			<iframe class="gallery-item left landscape" src="https://www.youtube.com/embed/hdk5XY2Qk9w?autoplay=0&mute=0&loop=1&modestbranding=1"></iframe>
-			<p>3D Modeling, Animation, Material Shader Development, Sound Design, Lighting Setup, Compositing, Video Editing</p>
-			
-			<iframe class="gallery-item right portrait" src="https://www.youtube.com/embed/ElEQ9QfnQZU?autoplay=0&mute=0&loop=1&modestbranding=1"></iframe>
-			<img 	class="gallery-item left" src="assets/images/Mason_Powers_Egg_Seltzer.jpg" alt="Fried Egg Flavored Polar Seltzer Can Render">
-			<img 	class="gallery-item left" src="assets/images/Mason_Powers_Apple_Car.jpg" alt="Apple Car Project Titan Concept Render Buckle Up">
-			<img 	class="gallery-item right" src="assets/images/Mason_Powers_Porsche_911_GT3_Wing_Riser_Render.jpg" alt="Green Porsche 911 GT3 Wing Riser Render Dramatic Lighting">
-			<img 	class="gallery-item right" src="assets/images/Mason_Powers_Renault_5_Turbo.jpg" alt="Red Renault 5 Turbo Dramatic Lighting Render">
-			
+			<figure>
+				<img 	class="gallery-item left" src="assets/images/Mason_Powers_Egg_Seltzer.jpg" alt="Fried Egg Flavored Polar Seltzer Can Render">
+			</figure>
+			<p>Three times your recommended daily dose of cholesterol. Work Showcased: Packaging Design, 3D Modeling, Material Shader Development, Lighting Setup, Post Processing</p>
+
+			<figure>
+				<img 	class="gallery-item left" src="assets/images/Mason_Powers_Apple_Car.jpg" alt="Apple Car Project Titan Concept Render Buckle Up">
+			</figure>
+			<p>Concept rendering of an Apple car. Work showcased: 3D Modeling, Material Shader Development, Lighting Setup, Color Grading, Post Processing</p>
+
+
+			<figure>
+				<img 	class="gallery-item right" src="assets/images/Mason_Powers_Porsche_911_GT3_Wing_Riser_Render.jpg" alt="Green Porsche 911 GT3 Wing Riser Render Dramatic Lighting">
+			</figure>
+			<p>A dramatic tail light... Work showcased: Material Shader Development, Lighting Setup, Rendering, Compositing, Color Grading</p>
+
+			<figure>
+				<img 	class="gallery-item right" src="assets/images/Mason_Powers_Renault_5_Turbo.jpg" alt="Red Renault 5 Turbo Dramatic Lighting Render">
+			</figure>
+			<p>A mediocre render of a fantastic car. Work showcased: 3D Modeling, Material Shader Development, Lighting Setup, Rendering, Compositing, Color Grading</p>
+
 		<div class="navbar">
 			<a class ="menu-item" href="index.html">home</a>
 			<a class ="menu-item" href="#top">gallery</a>
@@ -90,6 +128,8 @@
 <!-- 
 
 []===== TODO =====[]
+
+figcaption to p captions
 
 Add Images:
 	White Porsche "Masons Portfolio" (need to be smaller)
