removed .html from url

--- a/gallery.html
+++ b/gallery.html
@@ -89,10 +89,10 @@
 			<p>A mediocre render of a fantastic car. Work showcased: 3D Modeling, Material Shader Development, Lighting Setup, Rendering, Compositing, Color Grading</p>
 
 		<div class="navbar">
-			<a class ="menu-item" href="index.html">home</a>
+			<a class ="menu-item" href="./">home</a>
 			<a class ="menu-item" href="#top">gallery</a>
-			<a class ="menu-item" href="services.html">services</a>
-			<a class ="menu-item" href="contact.html">contact</a>
+			<a class ="menu-item" href="./services">services</a>
+			<a class ="menu-item" href="./contact">contact</a>
 		</div>
 		<div class="shadow"></div>
 		</div>
