--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
 		</div>
 		<div class="navbar">
 			<a class ="menu-item" href="#top">home</a>
-			<a class ="menu-item" href="gallery.html">gallery</a>
-			<a class ="menu-item" href="services.html">services</a>
-			<a class ="menu-item" href="contact.html">contact</a>
+			<a class ="menu-item" href="./gallery">gallery</a>
+			<a class ="menu-item" href="./services">services</a>
+			<a class ="menu-item" href="./contact">contact</a>
 		</div>
 		</div>
 	</body>
