--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				<!-- <h1>Hey Hey, I'm<br> Mason Powers.<br> I Do Everything 3D</h1> -->
 			</div>
 			<div id="model"></div>
-			<div class="spacer"></div>
+			<div class="spacer" style="height: 8vh;"></div>
 
 			<svg class="scroll-icon" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
 			    <polyline points="0,50 50,100 100,50" fill="none" stroke-width="10%" stroke="#001b40">
@@ -83,6 +83,7 @@
 				<p>Everything I create excites me. If my work doesn't have character then what's the point?</p>
 			</div>
 			<hr class="floater">
+			<div class="spacer" style="height: 300vh;"></div>
 		</div>
 		<div class="navbar">
 			<a class ="menu-item" href="#top">home</a>
@@ -102,19 +103,17 @@
 FIXES:
 horizontal scroll still a problem 
 extend body on home page for full car rotation in desktop mode
-nav bar is bold/unbold on different pages
 
 NAV BAR: 
 add semantic <nav>
 Gradient moves to mouse hovered item
 
 CAR MODEL CHANGES
-	Windows still do some transparency wierdness
+	Tires have to low specular?
 	AO export
 		Soft Shadow
 	Finalize car color
 	#7c7bff
-	Wheel wells are highlight color
 
 Contact page:
 	headshot
@@ -129,7 +128,6 @@ Services Page:
 	Web Design
 
 Desktop View
-	design gallery page
 	Better look to floaters
 
 Tablet View
