Added Loading Page

--- a/gallery.html
+++ b/gallery.html
@@ -70,7 +70,10 @@
 			<p>A dramatic tail light... Work showcased: Material Shader Development, Lighting Setup, Rendering, Compositing, Color Grading</p>
 			
 			<img 	class="gallery-item right" src="assets/images/Mason_Powers_Renault_5_Turbo.jpg" alt="Red Renault 5 Turbo Dramatic Lighting Render">
-			<p>A mediocre render of a fantastic car. Work showcased: 3D Modeling, Material Shader Development, Lighting Setup, Rendering, Compositing, Color Grading</p>
+			<p>An old mediocre render of a fantastic car. Work showcased: 3D Modeling, Material Shader Development, Lighting Setup, Rendering, Compositing, Color Grading</p>
+
+			<div class="spacer" style="height: 15vh;"></div>
+
 
 		<div class="navbar">
 			<a class ="menu-item" href="./">home</a>
@@ -88,13 +91,10 @@
 
 []===== TODO =====[]
 
-figcaption to p captions
-
 Add Images:
 	White Porsche "Masons Portfolio" (need to be smaller)
 	Virtical Corvette in warehouse (smaller)
 	Lego Transformer (smaller GIF or looping video?)
-	Girl in purple gt3 (smaller)
 	Recolored ATLAS Bars (Color Grade)
 	Add more camera shake to Fabspeed Zoom Under
 
