Added contact page

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		</section>
 		<div id="scroll-clip">
 			<div class="white-bg-section"></div>
-			<div class="textbox" id="textbox">
+			<div class="textbox">
 				<h1>Hey Hey, I'm<br> Mason Powers.<br> I Create 3D Shit</h1>
 				<!-- <h1>Hey Hey, I'm<br> Mason Powers.<br> I Do Everything 3D</h1> -->
 			</div>
@@ -98,7 +98,7 @@
 				<a class ="menu-item" href="#top">home</a>
 				<a class ="menu-item" href="./gallery">gallery</a>
 				<a class ="menu-item" href="./services">services</a>
-				<a class ="menu-item" href="./contact">contact</a>
+				<a class ="menu-item" href="./contact.html">contact</a>
 			</div>
 		</div>
 
@@ -112,14 +112,17 @@
 []===== TODO =====[]
 
 FIXES:
-horizontal scroll still a problem ??
-extend body on home page for full car rotation in desktop mode
+Arrow doesnt move on mobile safari. replace w gif? better animation either way
+Horizontal scroll still a problem ??
 
 NAV BAR: 
 add semantic <nav>
 Gradient moves to mouse hovered item
 
-Loading Screen
+LOADING SCREEN:
+	Make funny
+	Nice CSS animation?
+	Game? (would have to work on mobile)
 
 CAR MODEL CHANGES
 	Tires have to low specular?
@@ -146,5 +149,6 @@ Desktop View
 Tablet View
 	Bigger Navbar
 
-
+Fun 404 page:
+	Looks like this page ran off. Play this game while we look for it.
 -->
