--- a/gallery.html
+++ b/gallery.html
@@ -14,23 +14,12 @@
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=DM Sans:400,700">
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rokkitt:100,300">
 
-		
-		<script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>
-		<script type="importmap">
-			{
-				"imports": {
-					"three": "https://cdn.jsdelivr.net/npm/three@0.145.0/build/three.module.js",
-					"GLTFLoader": "https://cdn.jsdelivr.net/npm/three@0.145.0/examples/jsm/loaders/GLTFLoader.js",
-					"RGBELoader": "https://cdn.jsdelivr.net/npm/three@0.145.0/examples/jsm/loaders/RGBELoader.js"
-				}
-			}
-		</script>
 	</head>
 	
 	<body id="body">
 		<div id="scroll-clip">
 			<div class="white-bg-section"></div>
-			<div class="textbox" id="textbox">
+			<div class="textbox">
 				<h1>Gallery</h1>
 				<h2>No Flash Photography!</h2>
 			</div>
@@ -90,6 +79,8 @@
 <!-- 
 
 []===== TODO =====[]
+
+Remove Left and Right Classes from images
 
 Add Images:
 	White Porsche "Masons Portfolio" (need to be smaller)
