removed services tab

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 			<div class="navbar">
 				<a class ="menu-item" href="#top">home</a>
 				<a class ="menu-item" href="./gallery">gallery</a>
-				<a class ="menu-item" href="./services">services</a>
+				<!-- <a class ="menu-item" href="./services">services</a> -->
 				<a class ="menu-item" href="./contact.html">contact</a>
 			</div>
 		</div>
