removed services tab from all pages

--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
 		<div class="navbar">
 			<a class ="menu-item" href="./">home</a>
 			<a class ="menu-item" href="./gallery">gallery</a>
-			<a class ="menu-item" href="./services">services</a>
+			<!-- <a class ="menu-item" href="./services">services</a> -->
 			<a class ="menu-item" href="#top">contact</a>
 		</div>
 	</body>
