--- a/gallery.html
+++ b/gallery.html
@@ -67,7 +67,7 @@
 		<div class="navbar">
 			<a class ="menu-item" href="./">home</a>
 			<a class ="menu-item" href="#top">gallery</a>
-			<a class ="menu-item" href="./services">services</a>
+			<!-- <a class ="menu-item" href="./services">services</a> -->
 			<a class ="menu-item" href="./contact">contact</a>
 		</div>
 		<div class="shadow"></div>
