remove scroll icon svg

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 			<div id="model"></div>
 			<div class="spacer" style="height: 8vh;"></div>
 
-			<svg class="scroll-icon" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
+			<!-- <svg class="scroll-icon" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
 			    <polyline points="0,50 50,100 100,50" fill="none" stroke-width="10%" stroke="#001b40">
 				
 					<animate
@@ -70,7 +70,7 @@
 					/>
 
 				</polyline>
-			</svg>
+			</svg> -->
 						  
 			<div class="floater left">
 				<h2>I Do 3D Visualization</h2>
